# TinaIDE-wuxianggujun

./: .gitignore  .gitmodules  .ignore  .plan.md  AGENTS.md  ANALYSIS_SUMMARY.txt  CHANGELOG.md  CLANGD_FIX.md  COMPILE_FIX.md  LICENSE  README.md  README_EN.md  REFACTOR_COMPLETE.md  build.gradle.kts  gradle.properties  log.txt  settings.gradle.kts  version.properties
.agents/skills/tina-plugin-system/: SKILL.md
.claude/: operations-log.md
.github/workflows/: dev-build.yml  pr-build.yml  receive-release.yml  release.yml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/arm64/assets/android-sysroot/: profiles.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: init-host.sh  init.sh
app/src/main/assets/apk_templates/: README.md
app/src/main/assets/help/: faq.md
app/src/main/assets/templates/: launcher_template.c
app/src/main/cpp/: CMakeLists.txt  hybrid_transport_test_jni.cpp  native_compiler.cpp  native_compiler.cpp.backup  shared_memory_test_jni.cpp
app/src/main/cpp/linker/: lld_linker.cpp  lld_linker.h  lld_linker_impl.cpp
app/src/main/cpp/lsp/: clangd_server.cpp  clangd_server.h  native_lsp_jni.cpp
app/src/main/cpp/lsp/native_client/bridge/: json_rpc_converter.cpp  json_rpc_converter.h
app/src/main/cpp/lsp/native_client/core/: clangd_control_bridge.cpp  clangd_control_bridge.h  clangd_process.cpp  clangd_process.h  lsp_request_manager.cpp  lsp_request_manager.h  lsp_result_cache.cpp  lsp_result_cache.h  native_lsp_client.cpp  native_lsp_client.h
app/src/main/cpp/lsp/native_client/mock/: mock_lsp_server.cpp  mock_lsp_server.h
app/src/main/cpp/lsp/native_client/protocol/: lsp_protocol.fbs  protocol_handler.cpp  protocol_handler.h
app/src/main/cpp/lsp/native_client/transport/: control_channel.cpp  shared_memory_helper.cpp  shared_memory_helper.h  shared_memory_transport.cpp  shared_memory_transport.h
app/src/main/cpp/lsp/simple/: simple_lsp_client.cpp  simple_lsp_client.h  simple_lsp_jni.cpp
app/src/main/cpp/runner/: shared_runner.cpp
app/src/main/cpp/treesitter/: README.md
app/src/main/cpp/treesitter/cmake/: README.md  cmake_jni.cpp
app/src/main/cpp/utils/: logging.h
app/src/main/res/color/: switch_thumb_color.xml  switch_track_color.xml  text_input_box_stroke.xml  text_input_hint_color.xml  text_input_stroke_color.xml
app/src/main/res/drawable/: baseline_color_lens_24.xml  bg_crash_log.xml  (+26 more)
core/apk-builder/: build.gradle.kts
core/cmake/: build.gradle.kts
core/compile/: build.gradle.kts
core/config/: build.gradle.kts
core/crash/: build.gradle.kts
core/database/: build.gradle.kts
core/editor-lsp/: build.gradle.kts
core/editor-view/: build.gradle.kts
core/git/: build.gradle.kts
core/linux-distro/: build.gradle.kts
core/logging/: build.gradle.kts
core/lsp/: build.gradle.kts
core/network/: build.gradle.kts
core/plugin/: build.gradle.kts
core/project/: build.gradle.kts
core/proot/: build.gradle.kts
core/storage/: build.gradle.kts
core/text-engine/: build.gradle.kts
core/tree-sitter/: build.gradle.kts
docker/: README.md
docker/embedded-ndk/: build-local.ps1
docker/llvm-build/: Dockerfile.dev  build-local.ps1  build-tools.ps1  build-xmake.ps1  clean-local.ps1  fetch-clang-headers.ps1  sync-to-app.ps1
docker/llvm-build/templates/: xmake_runner.cpp
docker/proot-build/: build-sysroot.sh
docs/: AIDE-Termux-Integration.md  CLANG_INTEGRATION_ROADMAP.md  CMake-LSP-Implementation.md  CMake工具打包问题解决.md  CMake项目支持.md  CMake项目测试指南.md  Clangd-Completion-Issue-Analysis.md  Clangd-Diagnostics-Analysis.md  Code-Refactoring-Guide.md  Cpp-Syntax-Highlight.md  EMBEDDED_NDK_TOOLS.md  LLD-Process-Isolation.md  LLVM_BUILD_DOCKER.md  LLVM_CLANG_STATUS.md  LLVM_SHARED_LIBS.md  LSP-Architecture-Major-Refactor.md  LSP-Architecture-Simplification-Proposal.md  LSP-Completion-Bug-Analysis.md  LSP-Debug-Guide.md  LSP-Integration.md  LSP-Performance-Optimization-Plan.md  LSP-SharedMemory-POC-Guide.md  LogView-Usage.md  Material-Design-Guide.md  Native-Compile-Runtime.md  Native-Linking-Strategies.md  Ninja-JNI-崩溃分析.md  Plugin-System-Architecture.md  README.md  REFACTOR_LLVM_BUILD.md  REFACTOR_SUMMARY.md  Stage1-Setup.md  TinaIDE-架构分析与改进建议.md  Tree-Sitter-Rewrite-Plan.md  alternative-without-termux.md  android-hosted-llvm-toolchain-analysis.md  apk-features-and-optimizations.md  ci-toolchain-assets.md  clangd-completion-fast-path.md  configuration-center.md  (+29 more)
docs/design/: CompileCommands-Package-Sync-Design.md  Editor-Theme-Customization-Design.md  PRoot-Runtime-Refactor.md  README.md  TinaIDE-Design-System.md  UI-Components-Style-Guide.md  unified-layout-snapshot.md
docs/guides/: File-Viewer-Guide.md  LSP-Debug-Guide.md  MT-Data-Files-Provider.md
docs/planning/: Architecture-Optimization-Tasks.md  Feature-Roadmap.md  README.md
docs/plugins/: LSP-Plugin-Development-Guide.md  Plugin-API-Guide.md  Plugin-Authoring-Tutorial.md  Plugin-Marketplace-Troubleshooting.md  Plugin-Project-Template-Wizard-Troubleshooting.md  Plugin-Roadmap.md  README.md
docs/registry/: GitHub-Registry.md
docs/testing/: README.md
feature/editor/: build.gradle.kts
feature/help/: build.gradle.kts
feature/output/: build.gradle.kts
feature/projectlist/: build.gradle.kts
feature/settings/: build.gradle.kts
feature/tutorial/: build.gradle.kts
feature/viewer/: build.gradle.kts
feature/wizard/: build.gradle.kts
feature/workspace/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: build-and-package-android-toolchain.sh
tools/: README.md  build-and-install-all-abi.ps1  build-apk.ps1  build-release.ps1  memu-adb-connect.ps1  package-sysroot-zip.ps1  setup-flatc.ps1  sync-llvm-build-all.ps1  sync-llvm-build.ps1  sync-llvm-headers.ps1  sync-tina-toolchain-assets.ps1  verify-android-sysroot-assets.ps1
tools/checks/: README.md  check_direct_file_operations.py  direct_file_operations_allowlist.txt
tools/ci/: restore-tina-toolchain-assets.sh
tools/i18n/: check_all.py  sync_values_en.py
tools/linux-distro/: README.md  linux-distros.lock.json  registry-manifest.v1.json
treeview/: build.gradle.kts
(+995 files in other folders)
